# wiki-mcp

./: .gitignore  README.md  pyproject.toml  wikijs_mappings.db
src/wiki/: crew.py  main.py
src/wiki/config/: agents.yaml  tasks.yaml
src/wiki/tools/: __init__.py  custom_tool.py
