[project]
name = "wiki"
version = "0.1.0"
description = "Wiki using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.4.1",
    "mcp>=1.21.0",
]

[project.scripts]
wiki = "wiki.main:run"
run_crew = "wiki.main:run"
train = "wiki.main:train"
replay = "wiki.main:replay"
test = "wiki.main:test"
run_with_trigger = "wiki.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
